--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">pawfect_app</string>
+    <string name="app_name" translatable="false">Pawfect Match</string>
 </resources>
