--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name" translatable="false">Pawfect Match</string>
-    <string name="gemini_querey" translatable="false">I will pass you coordinates of the place.
-        Please generate a walking path near this place, where I can walk my dog.
-        Return ONLY the list of coordinates for this path, NO TEXT. My coordinates - </string>
+    <string name="gemini_query" translatable="false">I will pass you coordinates of a location.
+Please generate a walking path nearby, including 10 random coordinates for places where I can walk my dog.
+The coordinates should be at least 100 meters apart from each other and from the starting point.
+Return ONLY the list of 10 coordinates, with no additional text.
+My coordinates: </string>
 
     <string-array name="breeds_array">
         <item>Affenpinscher</item>
@@ -127,4 +129,7 @@
         <item>Whippet</item>
         <item>Yorkshire Terrier</item>
     </string-array>
+
+    <string name="google_maps_api_key" translatable="false">AIzaSyAWZFWF2rUyThV5vzq7hRoIJXeWlAg1AiI</string>
+
 </resources>
